--- a/main.css
+++ b/main.css
@@ -12,18 +12,45 @@ body{
   font-weight: 400;
   text-align: left;
   text-rendering: optimizeLegibility;
-  height: auto;
-  width: auto;
+  height: 100vh;
+  width: 100vw;
+}
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+	align-items: center;
+	margin:1% 0 0 0;
 }
 
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} 
+
+.inputSection{
+	padding:2% 0;
+	display:flex;
+	flex-flow:column;
+	justify-content: center;
+	align-items: center;
+}
+.inputSection h1{
+	margin-bottom:1%;
+}
 .colorsSection{
 	display:flex;
 	flex-flow:column;
 	justify-content: center;
 	align-items: center;
-	
 }
-
+.colorRow{
+	width:550px;
+	max-width:70%;
+	justify-content:space-around;
+}
 .colorBox{
 	flex: 1 1 50%;
 	max-width: 125px;
@@ -36,18 +63,13 @@ body{
 	font-size:1.3rem;
 }
 
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-	align-items: center;
-	width:70%;
-
+.imageCenter{
+	margin:auto;
+	height:320px;
+	max-height:50%;
 }
-
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+@media(max-width:600px){
+	.colorsSection{
+	font-size:100%;
+	}
 }
